That should fix the alignment.

--- a/src/assets/styles/_measure-results-row.scss
+++ b/src/assets/styles/_measure-results-row.scss
@@ -1,16 +1,15 @@
 @import 'colors';
-@import 'measure-results-table';
 
 $block-class: 'measure-results-row';
 
-
+// Extending from .measure-results-table__header-section won't work because of specificity.
 @at-root {
     .#{$block-class} {
         & &__divider {
-            @extend .measure-results-table__divider;
+            background-color: $blue-grey-lighten-1;
         }
 
-        & &__row-section { // Extending from .measure-results-table__header-section won't work because of specificity.
+        & &__row-section { 
             justify-content: space-evenly;
             align-items: center;
             display: flex;
@@ -20,11 +19,26 @@ $block-class: 'measure-results-row';
         }
 
         & &__data-align {
-            @extend .measure-results-table__title-align;
+            display: flex;
+            justify-content: center;
+            padding: 16px 0 0 16px;
+            flex-basis: 14%;
+            min-width: 7%;
+            align-items: center;
+            margin: auto;
+        }
+
+        & &__data-align-measure {
+            @extend .measure-results-row__data-align;
+            flex-basis: 22%;
+            justify-content: left;
+            word-wrap: break-word;
+            text-align: left;
         }
 
         & &__data-align-small {
-            @extend .measure-results-table__title-align-small;
+            @extend .measure-results-row__data-align;
+            flex-basis: 8%
         }
 
         & &__data {
